crates/ui/src/view/snapshots/tgt_ui__view__chat_list__tests__cramped_height_with_tabs_does_not_overflow_120x8.snap
---
source: crates/ui/src/view/chat_list.rs
assertion_line: 794
expression: rendered
---
CHATS                                                                                                                   
                                                                                                                        
Main · Folder 1 · Folder 2                                                                                              
                                                                                                                        
  Archived  12                                                                                                          
▏ Alice                                                                                                                2
  Boss                                                                                                                  
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
