crates/ui/src/view/snapshots/tgt_ui__view__chat_list__tests__filtered_list_120x40.snap
---
source: crates/ui/src/view/chat_list.rs
expression: rendered
---
CHATS                                                                                                                   
                                                                                                                        
/team                                                                                                                   
▏ Team Rust                                                                                                            9
  Design Team
