crates/ui/src/view/snapshots/tgt_ui__view__chat_list__tests__loading_state_before_chats_arrive_120x40.snap
---
source: crates/ui/src/view/chat_list.rs
assertion_line: 841
expression: rendered
---
CHATS                                                                                                                   
                                                                                                                        
loading chats
