crates/ui/src/view/snapshots/tgt_ui__view__chat_list__tests__populated_list_with_badges_and_selection_120x40.snap
---
source: crates/ui/src/view/chat_list.rs
expression: "render_to_string(120, 40, &state)"
---
CHATS                                                                                                                   
                                                                                                                        
▏ Alice                                                                                                                2
  Team Rust                                                                                                            9
  Mom                                                                                                                   
  #rust-de                                                                                                            @1
  Bob                                                                                                                   
  Archived                                                                                                            12
  Design Team                                                                                                           
  Carol                                                                                                               @5
