crates/ui/src/view/snapshots/tgt_ui__view__chat_list__tests__sidebar_pinned_archive_and_folder_tabs_120x40.snap
---
source: crates/ui/src/view/chat_list.rs
expression: rendered
---
┌CHATS─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Main · Folder 1 · Folder 2                                                                                            │
│  Archived  12                                                                                                        │
│▸ Alice                                                                                                              2│
│  Boss                                                                                                                │
│──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│  Team Rust                                                                                                          9│
│  Mom                                                                                                                 │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
